--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -1,11 +1,11 @@
 # Preferred name (Characters only)
 name: "Vandana Damodara"
 # Your GitHub repo root URL
-github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_demo
+github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_VandanaDamodara
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary:Highly qualified software Engineer with 3 years of  experience in the industry holding Bachelors of Technology degree .I enjoy creative problem solving and getting exposure on multiple projects,  I would excel in the collaborative work environment,Highly proficient, Experienced, result-oriented, resourceful and problem-solving Data engineer with leadership skills. Adapt and met challenges of tight release date.I strive to  Stay current with relevant  techniques, technology and other impacting factors 
+summary: Highly qualified software Engineer with 3 years of  experience in the industry holding Bachelors of Technology degree .I enjoy creative problem solving and getting exposure on multiple projects,  I would excel in the collaborative work environment,Highly proficient, Experienced, result-oriented, resourceful and problem-solving Data engineer with leadership skills. Adapt and met challenges of tight release date.I strive to  Stay current with relevant  techniques, technology and other impacting factors 
 
 
 # Group your skills by level.
@@ -40,12 +40,8 @@ jarvis_projects:
     git_url: "/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Developed Cluster Monitoring agent  which is used to monitor and collect data of various host machines connected through a network. The data that is collected includes hardware specifications, activity, and performances of machines in the cluster
-Data is stored in PostgreSQL Database which is an RDBMS database using Docker Containers.
-Bash Scripts are used to initialize the process by creating psql container using Docker.
-Bash scripts are also used to monitor the host usage and host information data. This system uses crontab to collect real-time data every minute to generate statistics regarding resource utilization.
-The Monitoring agent sends the data to a database for storage and further analysis.
-.
+    description:  Developed Cluster Monitoring agent  which is used to monitor and collect data of various host machines connected through a network. The data that is collected includes hardware specifications, activity, and performances of machines in the cluster.Data is stored in PostgreSQL Database which is an RDBMS database using Docker Containers.Bash Scripts are used to initialize the process by creating psql container using Docker.Bash scripts are also used to monitor the host usage and host information data. This system uses crontab to collect real-time data every minute to generate statistics regarding resource utilization.The Monitoring agent sends the data to a database for storage and further analysis.
+
   - name: "Core Java Apps"
     git_url: "/core_java"
     description:
@@ -59,7 +55,7 @@ The Monitoring agent sends the data to a database for storage and further analys
     git_url: "/python_data_anlytics"
     description: ""
   - name: "Hadoop"
-    igit_url: "/hadoop"
+    git_url: "/hadoop"
     description: ""
   - name: "Spark"
     git_url: "/spark"
@@ -98,7 +94,7 @@ professional_experience:
 
 #List of edcuation
 education: 
-  - school_name: "Veer Surendra sai university of Technology
+  - school_name: "Veer Surendra sai university of Technology"
     duration: "2007-2011"
     degree: "Bachelor of Technology"
     department: "Electronics and Telecommunication"
@@ -111,7 +107,7 @@ education:
     duration: "2016-2018"
     degree: "Master of Engineering"
     department: "Electrical and Computer Engineering"
-    awards_achievements: 
+    awards_achievements:  
 
 #Optional section
 others:
@@ -120,15 +116,9 @@ others:
     #list of items
     bullets:
       - "AZ-900: Microsoft Azure Fundamentals"
-  - title: "Certificates"
-    bullets:
       - "IBM-Introduction to Data Engineering"
-  - title: "Certificates"
-    bullets:
       - "IBM-Introduction to Relational Databases (RDBMS) "
-- title: "Certificates"
-    bullets:
-      - "IBM-Databases and SQL for Data science with python "
+      - "IBM-Databases and SQL for Data science with python"
 
 
 
