--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,8 +5,11 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_VandanaDam
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: Highly qualified software Engineer with 3 years of  experience in the industry holding Bachelors of Technology degree .I enjoy creative problem solving and getting exposure on multiple projects,  I would excel in the collaborative work environment,Highly proficient, Experienced, result-oriented, resourceful and problem-solving Data engineer with leadership skills. Adapt and met challenges of tight release date.I strive to  Stay current with relevant  techniques, technology and other impacting factors 
-
+summary: Highly qualified software Engineer with  three years of experience in the industry holding Bachelor of Technology degree
+  .I enjoy creative problem solving and getting exposure on multiple projects, I would excel in the collaborative work
+  environment, Highly proficient, Experienced, results-oriented, resourceful, and problem-solving Data engineer with leadership
+  skills. Adapt and met the challenges of a tight release date. I strive to stay current with relevant techniques, technology and
+  other impacting factors
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -40,43 +43,25 @@ jarvis_projects:
     git_url: "/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description:  Developed Cluster Monitoring agent  which is used to monitor and collect data of various host machines connected through a network. The data that is collected includes hardware specifications, activity, and performances of machines in the cluster.Data is stored in PostgreSQL Database which is an RDBMS database using Docker Containers.Bash Scripts are used to initialize the process by creating psql container using Docker.Bash scripts are also used to monitor the host usage and host information data. This system uses crontab to collect real-time data every minute to generate statistics regarding resource utilization.The Monitoring agent sends the data to a database for storage and further analysis.
+    description:  Developed Cluster Monitoring agent  which is used to monitor and collect data of various host machines connected through a network. The data that is collected includes hardware specifications, activity, and performances of machines in the cluster.Data is stored in PostgreSQL Database which is an RDBMS database provisioned with Docker Containers.Bash Scripts are used to initialize the process by creating psql container using Docker.Bash scripts are also used to monitor the host usage and host information data. This system uses crontab to collect real-time data every minute to generate statistics regarding resource utilization.The Monitoring agent sends the data to a database for storage and further analysis.
 
   - name: "Core Java Apps"
     git_url: "/core_java"
     description:
-      - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-  - name: "Springboot App"
-    git_url: "/springboot"
-    description: ""
-  - name: "Python Data Analytics"
-    git_url: "/python_data_anlytics"
-    description: ""
-  - name: "Hadoop"
-    git_url: "/hadoop"
-    description: ""
-  - name: "Spark"
-    git_url: "/spark"
-    description: ""
-  - name: "Cloud/DevOps"
-    git_url: "/cloud_devops"
-    description: ""
+      - "JDBC App:  Constructed the JDBC application to perform CRUD operations using DAO and DTO design patterns on a PostgreSQL retail store's database"
+      - "Grep App:   Created the Java Grep Application which is an implementation of the Linux Grep command which search for a string of characters in a given directory and outputs them to another file. The application was created with Java SE 8 Lambda/Steam API's with Apache Maven and deployed using Docker"
+      - "The projects were designed, implemented, tested, and deployed with; *Git, Docker, Bash Scripts, CentOS 7, PostgreSQL, Java 8 [Lambda/Steam Functions], Apache Maven, Mockito, DAO Design Pattern, Spring, JDBC API, Twitter Rest API, and Google Cloud Platform*"
+
 
 # List of personal or academic projects
 # Feel free to add more projects
 highlighted_projects:
     #project name
-  - name: "Web app for resturant"
+  - name: "DataBase Design for Retail"
     #URL is optional
-    git_url: "https://github.com/jarviscanada/jarvis_profile_builder"
-    # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
-  - name: "Machine Learning"
     git_url:
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
-
+    # The project description must start with an action verb (https://bit.ly/3guO98u)
+    description: "Designed a Database for Retail Customer comprising of number of Entities by Entity Relationship diagram and Implementing the same by creating number of tables having primary keys and foreign keys to recognize the relationship Which had helped to ease the Querying of database .Used IBM DB2 for the same."
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
 #The description must be more than 25 words. If your experience is not software related, please focus on soft skills and achievements (e.g. team collaboration, problem-solving, improvements, communication).
@@ -86,7 +71,7 @@ professional_experience:
     company: "Jarvis"
     duration: "2021-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Worked in a agile development environment where I developed few Data Engineering projects in Linux/SQl . Contributed to all the stages of software Development cycle through continous participation in scrum meetings and Agile best practices.Used Linux environment for all theh projects."
+    description: "Worked as a Data Engineer in a small Agile/Scrum environment to develop and implement solutions to various problems within the Jarvis team . The projects were implemented using Git/GitHub, Docker, Bash Scripts, CentOS 7, PostgreSQL, Python, Java SE 8, Apache Maven, JDBC API.Contributed to all the stages of software Development cycle through continous participation in scrum meetings and Agile best practices.Used Linux environment for all the projects."
   - title: "System Engineer"
     company: "Tata Consultancy services"
     duration: "2011-2014"
