--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -16,7 +16,7 @@ summary: Highly qualified software Engineer with  three years of experience in t
 skills:
   # At least 5 skills
   proficient:
-    - Jav
+    - Java
     - Linux/Bash
     - RDBMS/SQL
     - Agile/Scrum
