--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,9 +5,7 @@ github_repo_root_url: https://github.com/jarviscanada/jarvis_data_eng_VandanaDam
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I am a qualified and experienced software engineer with three years of experience in the industry. I had completed my  Bachelor of Technology degree in Electronics and Telecommunications.
-  As a software developer, I believe that being able to work with/understanding lower levels of abstraction behind a program is a prerequisite to writing highly optimized code. I enjoy creative problem solving and getting exposure to multiple projects. I love working in a collaborative work environment. I am a Highly proficient, diligent, and excellent problem solver. As a Junior Data Engineer at Jarvis, I was able to participate in various challenging projects using an Agile/Scrum framework that allowed me to become proficient in technologies like Java, Git, SQL, Bash, Maven, and Docker. My experiences have taught me how to think outside the box when working, and I always strive to find the most optimized solution to the problem. I strive to stay current with relevant techniques and technologies
-
+summary: I am a qualified and experienced software engineer with three years of experience in the industry. I had completed my Bachelor of Technology degree in Electronics and Telecommunications. As a software developer, I believe that working with/understanding lower levels of abstraction behind a program is a prerequisite to writing highly optimized code. I enjoy creative problem solving and getting exposure to multiple projects. I love working in a collaborative work environment. I am a Highly proficient, diligent, and excellent problem solver. As a Junior Data Engineer at Jarvis, I participated in various challenging projects using an Agile/Scrum framework that allowed me to become proficient in technologies like Java, Git, SQL, Bash, Maven, and Docker. My experiences have taught me how to think outside the box when working, and I always strive to find the most optimized solution to the problem. I strive to stay current with relevant techniques and technologies.
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
 skills:
@@ -40,13 +38,13 @@ jarvis_projects:
   - name: "Cluster Monitor"
     git_url: "/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
-    # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Developed Cluster Monitoring agent which is used to monitor and collect data of various host machines connected through a network. The data that is collected includes hardware specifications, activity, and performances of machines in the cluster. Data is stored in PostgreSQL Database which is an RDBMS database provisioned with Docker Containers. Bash Scripts are used to initialize the process by creating psql container using Docker. Bash scripts are also used to monitor the host usage and host information data. This system uses crontab to collect real-time data every minute to generate statistics regarding resource utilization. The Monitoring agent sends the data to a database for storage and further analysis.
+    # The project description must start with an action verb (https://bit.ly/3guO98)
+    description: Developed a Cluster Monitoring agent, which is used to monitor and collect data of various host machines connected through a network. The data that is collected includes hardware specifications, activity, and performances of machines in the cluster. The hardware usage data is persisted in a PostgreSQL Database, an RDBMS database provisioned with Docker Containers. Bash Scripts are used to initialize the process by creating a PostgreSQL container using Docker. Bash scripts are also used to monitor the host usage and host information data. This system uses crontab to collect real-time data every minute to generate statistics regarding resource utilization. The Monitoring agent sends the data to a database for storage and further analysis.
   - name: "Core Java Apps"
     git_url: "/core_java"
     description:
       - "JDBC App:  Constructed the JDBC application to perform CRUD operations using DAO and DTO design patterns on a PostgreSQL retail store's database"
-      - "Grep App:  Programmed with Java 8 and leveraged its latest features including the stream API and lambda functions to develop an application similar to the Linux built-in grep feature. The program searches recursively through a root directory to map out all files and finds the lines that match the user-specified Java regular expression. Compilation was handled with the Maven tool, and the final product was packaged into a Docker container using Dockerfiles."
+      - "Grep App:  Programmed with Java 8 and leveraged its latest features, including the stream API and lambda functions, to develop an application similar to the Linux built-in grep feature. The program searches recursively through a root directory to map out all files and finds the lines that match the user-specified Java regular expression. The compilation was handled with the Maven tool, and the final product was packaged into a Docker container using Dockerfiles."
       - "The projects were designed, implemented, tested, and deployed with; *Git, Docker, Bash Scripts, CentOS 7, PostgreSQL, Java 8 [Lambda/Steam Functions], Apache Maven, Mockito, DAO Design Pattern, Spring, JDBC API, Twitter Rest API, and Google Cloud Platform*"
 
 
@@ -58,7 +56,7 @@ highlighted_projects:
     #URL is optional
     git_url:
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Designed a Relational Database and created Entity Relationship Diagram for Retail Customer containing various Entities. Implemented by creating many tables having primary keys and foreign keys to recognize the relationship Which had helped to ease the CRUD operations on the database. Performed various SQL Queries on the Database.This project was developed using IBM Db2"
+    description: "Designed a Relational Database and created Entity Relationship Diagram for Retail Customer containing various Entities. Implemented by creating many tables having primary keys and foreign keys to recognize the relationship, which helped ease the CRUD operations on the Database. Performed various SQL Queries on the Database.This project was developed using IBM Db2"
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
 #The description must be more than 25 words. If your experience is not software related, please focus on soft skills and achievements (e.g. team collaboration, problem-solving, improvements, communication).
 professional_experience:
@@ -67,11 +65,11 @@ professional_experience:
     company: "Jarvis"
     duration: "2021-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Worked as a Data Engineer in a small Agile/Scrum environment to develop and implement solutions to various problems within the Jarvis team . The projects were implemented using Git/GitHub, Docker, Bash Scripts, CentOS 7, PostgreSQL, Python, Java SE 8, Apache Maven, JDBC API.Contributed to all the stages of software Development cycle through continous participation in scrum meetings and Agile best practices.Used Linux environment for all the projects."
+    description: "Worked as a Data Engineer in a small Agile/Scrum environment to develop and implement solutions to various problems within the Jarvis team. The projects were implemented using Git/GitHub, Docker, Bash Scripts, CentOS 7, PostgreSQL, Python, Java SE 8, Apache Maven, JDBC API. Contributed to all the stages of the software development cycle through continuous participation in scrum meetings and Agile best practices. Used Linux environment for all the projects."
   - title: "System Engineer"
     company: "Tata Consultancy services"
     duration: "2011-2014"
-    description: "Developed many different Databases for data engineering projects. Worked on Database design and reviewing the database design model.  Contributed toward SDLC process and  Followed the Agile/Scrum team framework for team collaboration. Worked on various Projects comprising related to Database management systems. Worked on few Data ingestion projects to Big data. Worked on Hive queries. Examples of tools that I worked with include Java, SQL, IBM DB,Oracle, MySQL Docker, Linux Bash, and many other important technologies all while crafting solutions to real-world problems"
+    description: "Designed and Developed  Database Models for various data engineering projects. Worked on Database designing and assisted with reviewing the database design model. Contributed to SDLC process and  Followed the Agile/Scrum team framework for team collaboration. Worked on various Project activities related to Relational Database management systems .Assisted on few Data ingestion projects from RDBMS to Big data. Worked on Hive queries. Examples of tools that I worked with include Java, SQL, IBM DB, Oracle, MySQL Docker, Linux Bash, and many other important technologies all while crafting solutions to real-world problems."
 #List of edcuation
 education: 
   - school_name: "Veer Surendra sai university of Technology"
