--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -47,6 +47,9 @@ jarvis_projects:
       - "Grep App:  Programmed with Java 8 and leveraged its latest features, including the stream API and lambda functions, to develop an application similar to the Linux built-in grep feature. The program searches recursively through a root directory to map out all files and finds the lines that match the user-specified Java regular expression. The compilation was handled with the Maven tool, and the final product was packaged into a Docker container using Dockerfiles."
       - "Twitter App: Developed a Java command line CRUD application capable of posting, viewing, and deleting tweets from a user's Twitter account. Utilized Twitter REST API and leveraged HTTP for client-server communication. The application follows the MVC architecture and comprises multiple layers to facilitate development and testing. Spring Boot was used for dependency management, Docker for deployment, and Maven for building and packaging the application."
       - "The projects were designed, implemented, tested, and deployed with; *Git, Docker, Bash Scripts, CentOS 7, PostgreSQL, Java 8 [Lambda/Steam Functions], Apache Maven, Mockito, DAO Design Pattern, Spring, JDBC API, Twitter Rest API, and Google Cloud Platform*"
+  - name: "Hadoop"
+    git_url: "/hadoop"
+    description: Set up a Hadoop cluster on the Google Cloud Platform to handle and analyze big data, and optimally execute queries. Used Apache Hive to execute HSQL queries, and Apache Zeppelin to store all the results in a notebook. Data was stored in an HDFS volume, and queries were further optimized by using partitioned tables and columnar.
 
 
 # List of personal or academic projects
