--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -50,7 +50,9 @@ jarvis_projects:
   - name: "Hadoop"
     git_url: "/hadoop"
     description: Set up a Hadoop cluster on the Google Cloud Platform to handle and analyze big data, and optimally execute queries. Used Apache Hive to execute HSQL queries, and Apache Zeppelin to store all the results in a notebook. Data was stored in an HDFS volume, and queries were further optimized by using partitioned tables and columnar.
-
+  - name: "Springboot"
+    git_url: "/Springboot"
+    description: Made a trading application that allows users to manage accounts, quotes, and fetch stock information from IEX Cloud. All the components were implemented using Java, and Spring Boot was used to manage the dependencies, and have Apache Tomcat be used as a WebServlet. IEX Cloud APIs were used to retrieve the latest stock information, and PostgreSQL was used to create database schemas. Maven was used to manage the Java dependencies, and testing was done using JUnit 4. The project was then deployed on DockerHub as two docker images, where one image is the Postgres database that would set up all the relations, and the other image is the trading app itself.
 
 # List of personal or academic projects
 # Feel free to add more projects
